along with this program; if not, write to the Free Software
Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.

============================================================

PyKota NEWS :

    - 1.19alpha19 :
    
        - Fixed over-verbose exits when displaying help
          or version.
          
        - Extended some PATH in the shell scripts  

    - 1.19alpha18 :
    
        - History of payments is now stored in the database, and
          updated each time an user's balance is modified with
          edpykota --balance. This history represents each time
          the user was given some positive or negative credit,
          but doesn't reflect price paid for jobs, which appear
          in the jobs history instead.
          
        - Jobs history web reports now include the job's size in
          bytes. Also columns were reordered to render the report
          more easily readable.
          
    - 1.19alpha17 :
    
        - Mysterious bug (program exited unexpectedly without leaving
          any log message) which occured once in a while when
          cancelling jobs should be fixed now.
          
        - New 'crashrecipient' directive. Disabled by  
          default. See sample configuration file to see how
          to activate it. It is suggested that you activate it.
          
        - New PYKOTAJOBSIZEBYTES environment variable exported,  
          which contains the job's size in bytes. Empty jobs
          are now denied. This value is now stored in the job
          history (but not yet displayed from the web interface)
          
        - Preliminary work on payments storage : the PostgreSQL  
          and LDAP schemas should be OK now, but no code is written
          yet to support this functionnality.
          
    - 1.19alpha16 :
    
        - the newuser and newgroup LDAP specific directives now accept
          a second parameter to attach(), "fail" or "warn". If no entry